--- a/front/src/app/shared/product/product-card/product-card/product-card.component.html
+++ b/front/src/app/shared/product/product-card/product-card/product-card.component.html
@@ -30,7 +30,7 @@
     <h5 class="mb-3">{{ product.title }}</h5>
     <p>{{ product.description }}</p>
     <div class="text-end">
-      <button class="btn btn-secondary mt-3" (click)="closeModal()">Fermer</button>
+      <button class="btn btn-primary mt-3" (click)="closeModal()">Fermer</button>
     </div>
   </div>
 </div>
