--- a/front/src/app/shared/header/header/header.component.scss
+++ b/front/src/app/shared/header/header/header.component.scss
@@ -106,7 +106,7 @@ body {
   display: flex;
   align-items: center;
   gap: 8px;
-  color: #1f2937;
+  color: #2c81f8;
   text-decoration: none;
   font-weight: 500;
 }
@@ -147,3 +147,14 @@ a.active-link {
   text-decoration: none;
   font-weight: bold;
 }
+.header-actions .badge {
+  position: absolute;
+  top: -5px;
+  right: -5px;
+  background-color: red;
+  color: white;
+  border-radius: 50%;
+  padding: 2px 6px;
+  font-size: 12px;
+}
+
