--- a/front/src/app/shared/cart-modal/cart-modal/cart-modal.component.html
+++ b/front/src/app/shared/cart-modal/cart-modal/cart-modal.component.html
@@ -12,13 +12,25 @@
     <!-- Liste des produits -->
     <div class="cart-items" *ngIf="cartItems.length > 0; else emptyCart">
       <div class="cart-item" *ngFor="let item of cartItems">
-        <img [src]="item.product?.image" alt="Produit" width="60" height="60" />
-        <div class="cart-item-info">
-          <h5 class="cart-item-title">{{ item.product?.name }}</h5>
-          <p class="cart-item-price">{{ item.product?.price }} TND x {{ item.quantity }}</p>
-        </div>
-        <button class="remove-item-btn" (click)="removeFromCart(item.id)">🗑</button>
-      </div>
+  <img [src]="item.product?.image" alt="Produit" width="60" height="60" />
+
+  <div class="cart-item-info">
+    <h5 class="cart-item-title">{{ item.product?.name }}</h5>
+
+    <div class="quantity-control">
+      <button class="qty-btn small minus" (click)="decreaseQuantity(item)">−</button>
+      <span class="qty-value">{{ item.quantity }}</span>
+      <button class="qty-btn small plus" (click)="increaseQuantity(item)">+</button>
+    </div>
+
+    <p class="cart-item-price">
+      {{ item.product?.price }} DT x {{ item.quantity }}
+    </p>
+  </div>
+
+  <button class="remove-item-btn" (click)="removeFromCart(item.id)">🗑</button>
+</div>
+
     </div>
 
     <!-- Si panier vide -->
