--- a/front/src/app/shared/product/product-card/product-card/product-card.component.scss
+++ b/front/src/app/shared/product/product-card/product-card/product-card.component.scss
@@ -1,54 +1,3 @@
-.product-card {
-    transition: all 0.3s ease;
-    overflow: hidden;
-    cursor: pointer;
-}
-
-.product-card:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
-}
-
-.product-image {
-    transition: all 0.5s ease;
-    height: 300px;
-    object-fit: cover;
-}
-
-.product-card:hover .product-image {
-    transform: scale(1.05);
-}
-
-.badge-custom {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    z-index: 2;
-}
-
-.price {
-    font-size: 1.5rem;
-    font-weight: 600;
-    color: #2c3e50;
-}
-
-.btn-custom {
-    background: linear-gradient(45deg, #3498db, #2ecc71);
-    border: none;
-    transition: all 0.3s ease;
-}
-
-.btn-custom:hover {
-    transform: translateX(5px);
-    box-shadow: -5px 5px 15px rgba(46, 204, 113, 0.3);
-}
-
-.modal-backdrop {
-  position: fixed;
-  top: 0; left: 0; right: 0; bottom: 0;
-  background: rgba(0, 0, 0, 0.5);
-  z-index: 1000;
-}
 
 .custom-modal {
   position: fixed;
@@ -61,6 +10,30 @@
   padding: 20px;
   transform: translate(-50%, -50%);
   z-index: 1001;
-   box-shadow: 0 10px 25px rgba(237, 241, 248, 0.2);
+  box-shadow: 0 8px 3px rgba(0, 0, 0, 0.15);
+}
+
+.product-card {
+  width: 18rem;
+  border-radius: 1rem;
+  overflow: hidden;
+  box-shadow: 0 7px 7px rgba(0,0,0,0.1);
+  transition: transform 0.3s, box-shadow 0.3s;
+}
+
+.product-card:hover {
+  transform: translateY(-5px);
+
+}
+
+.card-img-top {
+  height: 200px;
+  object-fit: cover;
+}
+
+.price {
+  font-size: 1.2rem;
+  font-weight: bold;
+  color: #474747;
 }
 
