--- a/front/src/app/shared/admin/admin/model/editprod/editprod.component.html
+++ b/front/src/app/shared/admin/admin/model/editprod/editprod.component.html
@@ -12,6 +12,10 @@
       <label>Prix</label>
       <input type="number" formControlName="price" />
 
+      <label>Quantité</label>
+      <input type="number" formControlName="Stock" />
+
+
       <label>Image URL</label>
       <input type="text" formControlName="image" />
 
