--- a/front/src/app/shared/cart-modal/cart-modal/cart-modal.component.scss
+++ b/front/src/app/shared/cart-modal/cart-modal/cart-modal.component.scss
@@ -1,13 +1,17 @@
 /* Fond semi-transparent */
+/* Fond semi-transparent + flou */
 .modal-backdrop {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.6);
+  background-color: rgba(0, 0, 0, 0.3); /* semi-transparent */
+  backdrop-filter: blur(12px); /* flou */
+  -webkit-backdrop-filter: blur(5px); /* compatibilité Safari */
   z-index: 1000;
 }
+
 
 /* Modal principal */
 .cart-modal {
