--- a/front/src/app/shared/admin/admin/model/editprod/editprod.component.html
+++ b/front/src/app/shared/admin/admin/model/editprod/editprod.component.html
@@ -13,7 +13,7 @@
       <input type="number" formControlName="price" />
 
       <label>Quantité</label>
-      <input type="number" formControlName="Stock" />
+      <input type="number" formControlName="stock" />
 
 
       <label>Image URL</label>
