--- a/front/src/app/shared/admin/sidbar/sidbar.component.scss
+++ b/front/src/app/shared/admin/sidbar/sidbar.component.scss
@@ -13,19 +13,29 @@
       border-bottom: 1px solid rgba(255,255,255,0.2);
     }
     .menu { flex: 1; padding: 15px 0; }
-    .menu-item {
-      display: flex;
-      align-items: center;
-      gap: 12px;
-      padding: 14px 24px;
-      color: #fff;
-      text-decoration: none;
-      transition: background 0.3s;
-    }
-    .menu-item:hover, .menu-item.active {
-      background: rgba(255,255,255,0.15);
-      border-radius: 8px;
-    }
+.menu-item {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  padding: 14px 24px;
+  color: #fff;
+  text-decoration: none;
+  transition: background 0.3s;
+}
+
+.menu-item:hover {
+  background: rgba(255,255,255,0.15);
+  
+}
+
+/* Lien actif */
+.menu-item.active {
+  background: rgba(255, 255, 255, 0.25); /* plus clair que le hover */
+  
+  font-weight: 500;
+}
+
+
     .sidebar-footer {
       padding: 15px;
       font-size: 13px;
