--- a/front/src/app/shared/admin/admin/model/addprod/addprod.component.scss
+++ b/front/src/app/shared/admin/admin/model/addprod/addprod.component.scss
@@ -56,6 +56,8 @@ h2 {
   font-size: 14px;
   outline: none;
   transition: border 0.2s;
+  color: #000;           /* texte noir pour être visible */
+  background-color: #fff;
 }
 
 .form-group input:focus,
