--- a/front/src/app/shared/product/product-card/product-card/product-card.component.scss
+++ b/front/src/app/shared/product/product-card/product-card/product-card.component.scss
@@ -19,7 +19,13 @@
   padding: 20px;
   transform: translate(-50%, -50%);
   z-index: 1001;
+  
   box-shadow: 0 8px 3px rgba(0, 0, 0, 0.15);
+}
+
+.custom-modal p,
+.custom-modal h5 {
+  color: #161616; /* texte visible */
 }
 
 .product-card {
