--- a/front/src/app/shared/category/category.component.html
+++ b/front/src/app/shared/category/category.component.html
@@ -1,32 +1,25 @@
 <div class="container">
-  <!-- Filtres à gauche -->
+  <!-- Filtres -->
+  
   <form [formGroup]="filterForm" class="filter-card">
-    <h3 class="filter-title">Filtres</h3>
+  <h3 class="filter-title">Filtres</h3>
 
-    <div class="filter-group">
-      <label>Recherche</label>
-      <input type="text" formControlName="prefix" />
-    </div>
+  <!-- Recherche -->
+  <div class="filter-group">
+    <label>Recherche</label>
+    <input type="text" formControlName="prefix" />
+  </div>
 
-    <div class="filter-group">
-      <label>Prix</label>
+  <!-- Prix -->
+  <div class="filter-group">
+    <label>Prix</label>
       <div class="price-slider">
-        <input
-          type="range"
-          min="0"
-          [max]="maxLimit"
-          [value]="filterForm.value.minPrice"
-          (input)="onMinPriceChange($event)"
-          class="thumb thumb-left"
-        />
-        <input
-          type="range"
-          min="0"
-          [max]="maxLimit"
-          [value]="filterForm.value.maxPrice"
-          (input)="onMaxPriceChange($event)"
-          class="thumb thumb-right"
-        />
+        <input type="range" min="0" [max]="maxLimit"
+               [value]="filterForm.value.minPrice"
+               (input)="onMinPriceChange($event)" class="thumb thumb-left"/>
+        <input type="range" min="0" [max]="maxLimit"
+               [value]="filterForm.value.maxPrice"
+               (input)="onMaxPriceChange($event)" class="thumb thumb-right"/>
 
         <div class="slider-track"></div>
         <div class="slider-range" [ngStyle]="getSliderRangeStyle()"></div>
@@ -40,23 +33,45 @@
           </span>
         </div>
       </div>
+  </div>
+
+  <!-- Tri -->
+  <div class="filter-group">
+    <label>Trier par</label>
+    <select formControlName="orderBy">
+      <option value="price_asc">Prix croissant</option>
+      <option value="price_desc">Prix décroissant</option>
+      <option value="name_asc">Nom A-Z</option>
+      <option value="name_desc">Nom Z-A</option>
+      <option value="in_stock">En stock</option>
+    </select>
+  </div>
+
+  <!-- 🔥 Déplacer attributs ICI -->
+<ng-container>
+  <div class="filter-group" *ngFor="let attr of attributes">
+    <div class="attribute-header" (click)="attr.open = !attr.open">
+      {{ attr.name }}
+      <span class="arrow">{{ attr.open ? '▲' : '▼' }}</span>
     </div>
 
-    <div class="filter-group">
-      <label>Trier par</label>
-      <select formControlName="orderBy">
-        <option value="price_asc">Prix croissant</option>
-        <option value="price_desc">Prix décroissant</option>
-        <option value="name_asc">Nom A-Z</option>
-        <option value="name_desc">Nom Z-A</option>
-        <option value="in_stock">En stock</option>
-      </select>
+    <div class="attribute-values" *ngIf="attr.open && attr.values?.length > 0">
+      <div *ngFor="let val of attr.values" class="checkbox-item">
+        <label>
+          <input type="checkbox"
+                 (change)="onAttributeChange(attr.id, val.value, $event)"
+                 [checked]="selectedAttributes[attr.id]?.includes(val.value)"/>
+
+          <span class="value">{{ val.value }}</span>
+          <!-- <span class="count">({{ val.count }})</span> -->
+        </label>
+      </div>
     </div>
-  </form>
+  </div>
+</ng-container>
+
+</form>
 
 
- <section class="product-list">
-  <app-product-card *ngFor="let product of products" [product]="product"></app-product-card>
-</section>
-
-
+<!-- Produits --> 
+ <section class="product-list"> <app-product-card *ngFor="let product of products" [product]="product"></app-product-card> <p *ngIf="products.length === 0">Aucun produit trouvé pour ces filtres.</p> </section> </div>
